# Adventure-llm

./: README.md  pyproject.toml
backend/: .env  database.db  main.py  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
backend/wrappers/: llm_wrapper.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/components/: LoadingStatus.jsx
